# py-astrologer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
astrologer/: categories.py  charts.py  houses.py  objects.py  points.py
astrologer/aspects/: __init__.py  aspects.py  orbs.py  utils.py
tests/: test_aspects.py  test_charts.py  test_houses.py  test_orbs.py  test_points.py
